# crefle-apriltag-cpp

./: CMakeLists.txt  LICENSE  README.md  calibration_data.yml  main.cpp
src/: camera_calibration.cpp  camera_calibration.hpp  camera_calibration_main.cpp  generate_markers.cpp  generate_markers.hpp  generate_markers_main.cpp  platform_logic.cpp  platform_logic.hpp  run_platform_system.cpp  run_platform_system.hpp
